[project]
name = "brand-guardian-ai-powered-video-advertisement-compliance-audit-system"
version = "0.1.0"
description = "Brand Guardian compliance auditing system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain-openai",
    "azure-search-documents",
    "azure-storage-blob",
    "pydantic-settings",
    "yt-dlp",
    "python-dotenv",
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"