[project]
name = "brand-guardian-ai-powered-video-advertisement-compliance-audit-system"
version = "0.1.0"
description = "Brand Guardian compliance auditing system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain-openai",
    "azure-search-documents",
    "azure-storage-blob",
    "pydantic-settings",
    "yt-dlp",
    "python-dotenv",
    "pytest",
    "azure-identity>=1.25.3",
    "azure-monitor-opentelemetry>=1.8.8",
    "firecrawl-py>=4.30.3",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langsmith>=0.9.3",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "redis>=8.0.1",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
